deployment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: daas-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/daas-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/daas-network: "true"

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: registry
  name: registry
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: registry

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: monitor
  name: monitor
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: monitor

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
    - name: "9002"
      port: 9002
      targetPort: 9002
  selector:
    io.kompose.service: gateway

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    io.kompose.service: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: registry
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/daas-network: "true"
        io.kompose.service: registry
    spec:
      containers:
        - image: daasalbion/registry:0.0.2-SNAPSHOT
          name: registry
          ports:
            - containerPort: 9000
      restartPolicy: Always
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: monitor
  name: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: monitor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/daas-network: "true"
        io.kompose.service: monitor
    spec:
      containers:
        - image: daasalbion/monitor:0.0.2-SNAPSHOT
          name: monitor
          ports:
            - containerPort: 9001
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/daas-network: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - image: daasalbion/gateway:0.0.2-SNAPSHOT
          name: gateway
          ports:
            - containerPort: 9002
      restartPolicy: Always
status: {}
